--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.5.1",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
